--- a/Exploring_Open_Products_Data.ipynb
+++ b/Exploring_Open_Products_Data.ipynb
@@ -377,6 +377,118 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Searching for for a product based on name, e.g., Sea Salt Potato Chips. This would be required if we are trying to map paroducts across knowledge-bases. For example, I picked up 'Sea Salt Potato Chips' from Open Food Facts data (http://world.openfoodfacts.org/data)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GTIN Code</th>\n",
+       "      <th>GTIN Name</th>\n",
+       "      <th>Segmentation (GPC)</th>\n",
+       "      <th>GPC Segmentation Code</th>\n",
+       "      <th>GPC Brick Code</th>\n",
+       "      <th>GPC Class Code</th>\n",
+       "      <th>GPC Family Code</th>\n",
+       "      <th>GTIN Image</th>\n",
+       "      <th>Brand Code</th>\n",
+       "      <th>Brand</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Package Type Code</th>\n",
+       "      <th>Package Type Name</th>\n",
+       "      <th>Weight (g)</th>\n",
+       "      <th>Weight (oz)</th>\n",
+       "      <th>Volume (ml)</th>\n",
+       "      <th>Volume (fl oz)</th>\n",
+       "      <th>Alcohol by Volume</th>\n",
+       "      <th>Alcohol by Weight</th>\n",
+       "      <th>Registration</th>\n",
+       "      <th>Registration Country ISO Code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>130034</th>\n",
+       "      <td>0020685000256</td>\n",
+       "      <td>Kettle Cooked Waffle Cut Sea Salt Potato Chips</td>\n",
+       "      <td>Food - Beverage - Tobacco</td>\n",
+       "      <td>50000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://product.okfn.org.s3.amazonaws.com/image...</td>\n",
+       "      <td>W3TRQF</td>\n",
+       "      <td>Cape Cod</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>GS1 US</td>\n",
+       "      <td>US</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 39 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            GTIN Code                                       GTIN Name  \\\n",
+       "130034  0020685000256  Kettle Cooked Waffle Cut Sea Salt Potato Chips   \n",
+       "\n",
+       "               Segmentation (GPC) GPC Segmentation Code GPC Brick Code  \\\n",
+       "130034  Food - Beverage - Tobacco              50000000            NaN   \n",
+       "\n",
+       "       GPC Class Code GPC Family Code  \\\n",
+       "130034            NaN             NaN   \n",
+       "\n",
+       "                                               GTIN Image Brand Code  \\\n",
+       "130034  http://product.okfn.org.s3.amazonaws.com/image...     W3TRQF   \n",
+       "\n",
+       "           Brand              ...              Package Type Code  \\\n",
+       "130034  Cape Cod              ...                            NaN   \n",
+       "\n",
+       "       Package Type Name Weight (g) Weight (oz) Volume (ml) Volume (fl oz)  \\\n",
+       "130034               NaN        NaN         7.0         NaN            NaN   \n",
+       "\n",
+       "       Alcohol by Volume Alcohol by Weight Registration  \\\n",
+       "130034               NaN               NaN       GS1 US   \n",
+       "\n",
+       "       Registration Country ISO Code  \n",
+       "130034                            US  \n",
+       "\n",
+       "[1 rows x 39 columns]"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pod_gtin[pod_gtin['GTIN Name'].str.contains('Sea Salt Potato Chips') == True]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Selecting those rows from pod_gtin for which the column 'Segmentation (GPC)' is not NaN. We need this subset so that we can sample from categories of items."
    ]
   },
